added headshot of Tom; the headshot it edited with AI

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </a>
 
                 <div style="min-width: 250px;">
-                    <img src="westfork.jpg" alt="headshot" class="img-fluid rounded mt-4">
+                    <img src="headshot.png" alt="headshot" class="img-fluid rounded mt-4">
                     <div class="text-center my-4">
                         <p class="h5 fw-bold fs-1 mb-1" style="text-transform: none;">Thomas Smith</p>
                         <p class="text-muted fs-4 mb-0">Founder and CEO</p>
