--- a/alt2.html
+++ b/alt2.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="alt2.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,6 +34,15 @@
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="alt3.html">Alt 3</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="alt4.html">Alt 4</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="alt5.html">Alt 5</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="alt6.html">Alt 6</a>
                 </li>
             </ul>
             </div>
@@ -74,7 +83,7 @@
             <p class="lead mb-4 text-start" style="text-indent: 2em;">
             Westfork's mission is to bridge the gap between emerging technologies and everyday clinical workflow—uniting purpose-built tools with expert oversight so providers and patients all benefit.
             </p>
-            <img src="healthcare5.webp" alt="Descriptive alt text" class="img-fluid my-4 opacity-75 rounded shadow-sm">
+            <img src="healthcare5.webp" alt="Descriptive alt text" class="img-fluid my-4 opacity-85 rounded shadow-sm">
             <h2 class="display-6 fw-bold mb-4">By the Numbers</h2>
             <div class="row text-center">
                 <div class="col-md-4 mb-4">
