--- a/alt6.html
+++ b/alt6.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="alt6.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,6 +34,15 @@
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="alt3.html">Alt 3</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="alt4.html">Alt 4</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="alt5.html">Alt 5</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="alt6.html">Alt 6</a>
                 </li>
             </ul>
             </div>
