updated index.html to reflect all variants

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
                 <li class="nav-item">
                 <a class="nav-link" href="alt3.html">Alt 3</a>
                 </li>
+                <a class="nav-link" href="alt4.html">Alt 4</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="alt5.html">Alt 5</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="alt6.html">Alt 6</a>
+                </li>
             </ul>
             </div>
         </div>
