--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li class="nav-item">
                 <a class="nav-link" href="alt3.html">Alt 3</a>
                 </li>
+                <li class="nav-item">
                 <a class="nav-link" href="alt4.html">Alt 4</a>
                 </li>
                 <li class="nav-item">
@@ -104,5 +105,7 @@
             </a>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-RvQoYcgG6DQDJnHwxod8R/9dbNUDcp0PevOXb6As2HkbiN5sRxq7Iu+iV4gk/AdA"
+        crossorigin="anonymous"></script>
 </body>
 </html>
