--- a/alt6.html
+++ b/alt6.html
@@ -12,42 +12,34 @@
     <link rel="stylesheet" href="alt6.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Versions</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav"
-                    aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Original</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="alt1.html">Alt 1</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="alt2.html">Alt 2</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="alt3.html">Alt 3</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="alt4.html">Alt 4</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="alt5.html">Alt 5</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="alt6.html">Alt 6</a>
-                </li>
-            </ul>
-            </div>
-        </div>
-    </nav>
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Versions</a>
+    <ul class="navbar-nav flex-row flex-wrap">
+      <li class="nav-item me-3">
+        <a class="nav-link active" href="index.html">Original</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="alt1.html">Alt 1</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="alt2.html">Alt 2</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="alt3.html">Alt 3</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="alt4.html">Alt 4</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="alt5.html">Alt 5</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="alt6.html">Alt 6</a>
+      </li>
+    </ul>
+  </div>
+</nav>
     <section class="py-5 text-center">
         <div class="container">
             <h1 class="display-4 fw-bold mb-4">Westfork Consulting</h1>
@@ -105,7 +97,5 @@
             </a>
         </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-RvQoYcgG6DQDJnHwxod8R/9dbNUDcp0PevOXb6As2HkbiN5sRxq7Iu+iV4gk/AdA"
-        crossorigin="anonymous"></script>
 </body>
 </html>
