--- a/alt2.html
+++ b/alt2.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="alt5.css">
+    <link rel="stylesheet" href="alt2.css">
 </head>
 <body>
 <nav class="navbar navbar-light bg-light">
@@ -20,7 +20,10 @@
         <a class="nav-link active" href="index.html">Original</a>
       </li>
       <li class="nav-item me-3">
-        <a class="nav-link" href="alt5.html">Alt 5</a>
+        <a class="nav-link" href="alt1.html">Alt 1</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="alt2.html">Alt 2</a>
       </li>
     </ul>
   </div>
@@ -36,17 +39,18 @@
                     </div>
                 </blockquote>
 
-                <a href="https://calendly.com/anewport-zj9w/30min" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg fs-3 rounded mb-4">
-                    Schedule a Call
-                </a>
-
+            <div class="d-flex justify-content-center flex-wrap gap-4 mt-4">
                 <div style="min-width: 250px;">
-                    <img src="headshot.png" alt="headshot" class="img-fluid rounded mt-4">
+                    <img src="westfork-75.png" alt="westfork logo" class="img-fluid rounded">
+                </div>
+                <div style="min-width: 250px;">
+                    <img src="headshot.png" alt="headshot" class="img-fluid rounded">
                     <div class="text-center my-4">
                         <p class="h5 fw-bold fs-1 mb-1" style="text-transform: none;">Thomas Smith</p>
                         <p class="text-muted fs-4 mb-0">Founder and CEO</p>
                     </div>
                 </div>
+            </div>
 
             <h2 class="display-6 fw-bold mb-4">Who We Are</h2>
             <p class="lead mb-4 text-start" style="text-indent: 2em;">
@@ -77,9 +81,14 @@
                 </div>
             </div>
             <div class="display-6 fw-semibold fst-italic mb-4" style="font-family: serif;">“The biggest risk for business leaders today is taking no risk”</div>
-            <a href="https://calendly.com/anewport-zj9w/30min" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg fs-3 rounded">
-            Schedule a Call
-            </a>
+            <h2 class="display-6 fw-bold mb-4">Contact Me</h2>
+            <span id="phone"></span> | <span id="email"></span>
+            <script>
+                const phone = "(405) 555-1299";
+                const email = "info@westfork.consulting";
+                document.getElementById("phone").textContent = phone;
+                document.getElementById("email").innerHTML = `<a href="mailto:${email}">${email}</a>`;
+            </script>
         </div>
     </section>
 </body>
