--- a/alt2.html
+++ b/alt2.html
@@ -25,6 +25,9 @@
       <li class="nav-item me-3">
         <a class="nav-link" href="alt2.html">Alt 2</a>
       </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="alt3.html">Alt 3</a>
+      </li>
     </ul>
   </div>
 </nav>
