--- a/alt3.html
+++ b/alt3.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="alt1.css">
+    <link rel="stylesheet" href="alt3.css">
 </head>
 <body>
 <nav class="navbar navbar-light bg-light">
@@ -41,51 +41,47 @@
                         They should carry human value.”
                     </div>
                 </blockquote>
-
-                <a href="https://calendly.com/anewport-zj9w/30min" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg fs-3 rounded mb-4">
-                    Schedule a Call
-                </a>
-
                 <div style="min-width: 250px;">
                     <img src="headshot.png" alt="headshot" class="img-fluid rounded mt-4">
                     <div class="text-center my-4">
                         <p class="h5 fw-bold fs-1 mb-1" style="text-transform: none;">Thomas Smith</p>
-                        <p class="text-muted fs-4 mb-0">Founder and CEO</p>
+                        <p class="text-muted fs-3 mb-0">Founder and CEO</p>
                     </div>
                 </div>
-
-            <h2 class="display-6 fw-bold mb-4">Who We Are</h2>
-            <p class="lead mb-4 text-start" style="text-indent: 2em;">
+            <h2 class="display-6 fw-bold mb-4 section-heading">Who We Are</h2>
+            <p class="lead fs-3 mb-4 text-start" style="text-indent: 2em;">
             Westfork is a healthcare and business enablement platform that bridges the gap between innovation and clinical impact.  
             We connect emerging technologies with the providers that need them most—unlocking new revenue, enhancing patient care, and streamlining adoption every step of the way.
             </p>
-            <p class="lead mb-4 text-start" style="text-indent: 2em;">
+            <p class="lead fs-3 mb-4 text-start" style="text-indent: 2em;">
             At Westfork Consulting, we're driven by a simple truth: <strong>innovation only matters when it creates real-world impact.</strong>  
             That means better care, stronger revenue, and simpler adoption for all.
             </p>
-            <p class="lead mb-4 text-start" style="text-indent: 2em;">
+            <p class="lead fs-3 mb-4 text-start" style="text-indent: 2em;">
             Westfork's mission is to bridge the gap between emerging technologies and everyday clinical workflow—uniting purpose-built tools with expert oversight so providers and patients all benefit.
             </p>
-            <img src="healthcare5.webp" alt="Descriptive alt text" class="img-fluid my-4 opacity-75 rounded shadow-sm">
-            <h2 class="display-6 fw-bold mb-4">By the Numbers</h2>
+            <div>
+                <img src="healthcare5.webp" alt="Descriptive alt text" class="img-fluid my-4 opacity-90 rounded shadow-sm">
+            </div>
+            <h2 class="display-6 fw-bold mb-4 section-heading">By the Numbers</h2>
             <div class="row text-center">
                 <div class="col-md-4 mb-4">
                     <div class="display-3 fw-bold text-primary">51%</div>
-                    <p class="fs-5 mb-1">of innovation fails when companies can't connect with businesses, providers, or payers</p>
+                    <p class="fs-3 mb-1">of digital health startups fail within two years</p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="display-3 fw-bold text-primary">38%</div>
-                    <p class="fs-5 mb-0">of U.S. adults reported delaying or skipping care due to cost</p>
+                    <p class="fs-3 mb-0">of adults reported delaying or skipping care due to cost</p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="display-3 fw-bold text-primary">72%</div>
-                    <p class="fs-5 mb-0">of U.S. hospitals struggle with patient data gaps</p>
+                    <p class="fs-3 mb-0">of hospitals struggle with patient data gaps</p>
                 </div>
             </div>
-            <div class="display-6 fw-semibold fst-italic mb-4" style="font-family: serif;">“The biggest risk for business leaders today is taking no risk”</div>
-            <a href="https://calendly.com/anewport-zj9w/30min" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg fs-3 rounded">
-            Schedule a Call
-            </a>
+            <h2 class="display-6 fw-bold mb-4 section-heading">Contact Me</h2>
+            <p class="fs-3">Email: <a href="mailto:john@westfork.com">test@westfork.com</a></p>
+            <p class="fs-3">Phone: <a href="tel:+15551234567">(555) 123‑4567</a></p>
+            <div class="display-6 fw-semibold fst-italic mb-4" style="font-family: serif;">“The biggest risk for business leaders today is taking no risk”</div>  
         </div>
     </section>
 </body>
